{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "2a5b63f8-26fe-2025-f37c-f9d29d1aa0ff",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-09-19T16:57:11.031-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/plataforma-3/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/networks/plataforma-3-vpc-tf",
            "priority": 455,
            "project": "plataforma-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/firewalls/allow-icmp",
            "source_ranges": [
              "201.51.203.184/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.plataforma-3-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-19T17:10:25.069-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/plataforma-3/global/firewalls/allow-tcp",
            "log_config": [],
            "name": "allow-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/networks/plataforma-3-vpc-tf",
            "priority": 1000,
            "project": "plataforma-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/firewalls/allow-tcp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.plataforma-3-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "auto-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/plataforma-3/global/networks/auto-vpc-tf",
            "mtu": 0,
            "name": "auto-vpc-tf",
            "project": "plataforma-3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/networks/auto-vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "plataforma-3-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/plataforma-3/global/networks/plataforma-3-vpc-tf",
            "mtu": 0,
            "name": "plataforma-3-vpc-tf",
            "project": "plataforma-3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/networks/plataforma-3-vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-19T16:41:46.625-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/plataforma-3/regions/us-central1/subnetworks/sub-sg",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "sub-sg",
            "network": "https://www.googleapis.com/compute/v1/projects/plataforma-3/global/networks/plataforma-3-vpc-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "plataforma-3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plataforma-3/regions/us-central1/subnetworks/sub-sg"
          },
          "dependencies": [
            "google_compute_network.plataforma-3-vpc-tf"
          ]
        }
      ]
    }
  ]
}